<resources>
    <string name="app_name">FiboRv</string>
    <string name="menu_item">Set N</string>
    <string name="dialog_title">Set upper limit</string>
    <string name="hint">your number here</string>
    <string name="invalid_input_toast">Please enter a positive number</string>
</resources>
